--- a/pagina_siguiente.html
+++ b/pagina_siguiente.html
@@ -156,15 +156,16 @@
 
 <body>
     <div class="sidebar">
-        <div class="icon-home"></div>
-        <div class="icon-another"></div>
+        <a href="#">Home</a>
+        <a href="#">Registros</a>
+        <a href="#">Ayuda</a>
+        <a href="#">Empresa</a>
     </div>
 
     <div class="main-container">
         <div class="header">
-            <h1>Panel de Tickets</h1>
+            <h1>Notificaciones</h1>
             <div class="user">
-                <div class="icon-user"></div>
                 <span>USER</span>
             </div>
         </div>
