--- a/pagina_siguiente.html
+++ b/pagina_siguiente.html
@@ -309,7 +309,6 @@
                 <a href="#" onclick="showContent('directorio')">Directorio</a>
             </div>
         </div>
-        <a href="#" onclick="showContent('registros')">Registros</a>
         <a href="#" onclick="showContent('ayuda')">Ayuda</a>
         <a href="#" onclick="showContent('empresa')">Empresa</a>
     </div>
@@ -443,16 +442,7 @@
             </tr>
         </table>
             `,
-            registros: `
-                <h2>REGISTROS</h2>
-                <hr></hr>
-                <div style="background-color: white; border: 2px solid #ccc; padding: 20px; width: 80%; margin: 20px auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <h3 style="text-align: center; color: #333;">BÚSQUEDA</h3>
-                <p style="font-family: Arial, sans-serif; font-size: 12px; color: #555;">
-                Encuentra aquí guías y soporte técnico para resolver tus dudas. Si necesitas más información, no dudes en ponerte en contacto con el soporte técnico.
-            </p>
-        </div>
-            `,
+
             ayuda: `
         <h2>CENTRO DE AYUDA</h2>
         <hr></hr>
@@ -477,19 +467,19 @@
             <p style="margin-top: 15px; font-family: Arial, sans-serif; font-size: 17px; line-height: 1.5; margin-bottom: 10px;">
 
                 1. ¿Qué servicios ofrece WOW PERU S.A.C?
-                Brindamos soluciones personalizadas en [detalla los servicios de la empresa, e.g., logística, consultoría, distribución, etc.].  <br>
+                Brindamos soluciones personalizadas en Internet de fibra óptica hasta el hogar, Administración de redes, Cableado estructurado, Soluciones Wi-Fi gestionadas.  <br>
 
                 2. ¿Cómo puedo contactar con servicio al cliente?
-                Puedes escribirnos a nuestro correo electrónico contacto@wowperu.com o llamarnos al [número de teléfono]. Nuestro horario de atención es de lunes a viernes, de 9:00 a.m. a 6:00 p.m.  <br> 
+                Puedes escribirnos a nuestro correo electrónico contacto@wowperu.com o llamarnos al (01) 6441969. Nuestro horario de atención es de lunes a viernes, de 9:00 a.m. a 6:00 p.m.  <br> 
 
                 3. ¿Dónde están ubicados?
-                Estamos ubicados en [dirección exacta]. Consulta la sección de Contáctanos para más detalles.  <br>
+                Estamos ubicados en  El Polo 401, Santiago de Surco 15023. Consulta la sección de Contáctanos para más detalles.  <br>
 
                 4. ¿Cómo puedo realizar un pedido o contratar sus servicios?
                 Accede a la sección de Servicios en nuestro sitio web, selecciona la opción deseada y completa el formulario con tus datos. Nos pondremos en contacto contigo lo antes posible.  <br>
 
                 5. ¿Qué métodos de pago aceptan?
-                Aceptamos pagos con tarjeta de crédito/débito, transferencias bancarias y [otros métodos específicos].  <br>
+                Aceptamos pagos con La empresa WOW ofrece los siguientes métodos de pago: Pagos por internet, Banco de Crédito del Perú, Interbank, Scotiabank, Yape, Caja Ica, etc.  <br>
     `,
             empresa: `
         <h2>INFORMACION DE LA EMPRESA</h2>
